// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FacebookMessengerButton adds a beforeClick function for the click handler 1`] = `
<ButtonRound
  aria-label="Facebook Messenger"
  buttonClassName="share-button--facebook-messenger"
  className=""
  href="#"
  icon={[Function]}
  label="Messenger"
  onClick={[Function]}
  role="button"
  title=""
/>
`;

exports[`FacebookMessengerButton does render if boxShadow is true 1`] = `
<ButtonRound
  aria-label="Facebook Messenger"
  boxShadow={true}
  buttonClassName="share-button--facebook-messenger"
  className=""
  href="#"
  icon={[Function]}
  label="Messenger"
  onClick={[Function]}
  role="button"
  title=""
/>
`;

exports[`FacebookMessengerButton does render if teaser are provided 1`] = `
<ButtonRound
  aria-label="Facebook Messenger"
  buttonClassName="share-button--facebook-messenger"
  className=""
  href="#"
  icon={[Function]}
  label="Messenger"
  onClick={[Function]}
  role="button"
  title=""
/>
`;

exports[`FacebookMessengerButton does render if utmParams are provided 1`] = `
<ButtonRound
  aria-label="Facebook Messenger"
  buttonClassName="share-button--facebook-messenger"
  className=""
  href="#"
  icon={[Function]}
  label="Messenger"
  onClick={[Function]}
  role="button"
  title=""
/>
`;

exports[`FacebookMessengerButton renders a round button 1`] = `
<ButtonRound
  aria-label="Facebook Messenger"
  buttonClassName="share-button--facebook-messenger"
  className=""
  href="#"
  icon={[Function]}
  label="Messenger"
  onClick={[Function]}
  role="button"
  title=""
/>
`;
